--- a/teammembers.htm
+++ b/teammembers.htm
@@ -2,7 +2,7 @@
 
 <head>
 <meta http-equiv="Content-Language">
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <title>TEAM MEMBERS</title>
 <style>
 <!--
@@ -42,16 +42,13 @@ p
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
-		<font face="Times New Roman"><b>Dr. 
-			Kevin CHENG</b></font></td>
+		<font face="Times New Roman"><b>Dr. Kevin CHENG</b></font></td>
 		<td width="226" height="0" align="center" valign="top">
 		<font face="Times New Roman"><b>Dr. Mohammad SABOKROU</b></font></td>
 		<td height="0" align="center" valign="top" width="209">
-		<font face="Times New Roman"><b>Dr. Hanlin 
-			MO</b></font></td>
+		<font face="Times New Roman"><b>Dr. Hanlin MO</b></font></td>
 		<td height="0" align="center" valign="top" width="223">
-		<font face="Times New Roman"><b>Dr. 
-			Qianru XU</b></font></td>
+		<font face="Times New Roman"><b>Dr. Qianru XU</b></font></td>
 	</tr>
 	<tr>
 		<td width="880" height="0" align="center" valign="top" colspan="4">
@@ -115,7 +112,7 @@ p
 		<td height="0" align="center" valign="top" width="209">
 		<img border="0" src="Zitong.jpg"></td>
 		<td height="0" align="center" valign="top" width="223">
-		　</td>
+		&#12288;</td>
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
@@ -123,13 +120,12 @@ p
 		<font face="Times New Roman">Mr. Khanh TRAN-THUONG</font></b></td>
 		<td width="226" height="0" align="center" valign="top">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.2cm"><b>
-		<font face="Times New Roman">Mr. Tuomas 
-			VARANKA</font></b></td>
+		<font face="Times New Roman">Mr. Tuomas VARANKA</font></b></td>
 		<td height="0" align="center" valign="top" width="209">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.2cm"><b>
 		<font face="Times New Roman">Mr. Zitong YU</font></b></td>
 		<td height="0" align="center" valign="top" width="223">
-		　</td>
+		&#12288;</td>
 	</tr>
 	<tr>
 		<td width="880" height="0" align="center" valign="top" colspan="4">
@@ -142,36 +138,34 @@ p
 		<td width="226" height="0" align="center" valign="top">
 		<img border="0" src="Xu.jpg" width="101" height="145"></td>
 		<td height="0" align="center" valign="top" width="209">
-		　</td>
+		&#12288;</td>
 		<td height="0" align="center" valign="top" width="223">
-		　</td>
+		&#12288;</td>
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
 		<font face="Times New Roman"><b>Dr. Yuhua FAN </b>(Liaocheng University)<span lang="en-us">:
 		</span>Oct. 2019 - Oct. 2022</font></td>
 		<td width="226" height="0" align="center" valign="top">
-		<font face="Times New Roman"><b>Assoc. 
-			Prof. 
-			Xu CHENG </b>(Nanjing University of Information Science and 
-			Technology): July 2021 - 
-			July. 2022</font></td>
+		<font face="Times New Roman"><b>Assoc. Prof. Xu CHENG </b>(Nanjing 
+		University of Information Science and Technology): July 2021 - July. 
+		2022</font></td>
 		<td height="0" align="center" valign="top" width="209">
-		　</td>
+		&#12288;</td>
 		<td height="0" align="center" valign="top" width="223">
-		　</td>
+		&#12288;</td>
 	</tr>
 	</table>
 <p class="title" style="line-height: 150%; margin-top:1cm">
 <font size="4"><b>Past members:</b></font></p>
 <ul>
 	<li>
-	<p class="title" style="line-height: 150%; "><span lang="en-us">Dr. 
-			Xin LIU (Associate </span>Professor, Lappeenranta-Lahti University 
-	of Technology (LUT), Finland)</p></li>
+	<p class="title" style="line-height: 150%; "><span lang="en-us">Dr. Xin LIU 
+	(Associate </span>Professor, Lappeenranta-Lahti University of Technology 
+	(LUT), Finland)</p></li>
 	<li>
 	<p class="title" style="line-height: 150%; ">Dr. Xiaobai L<span lang="en-us">i 
-			(Assistant Professor of CMVS, Oulu)</span></p></li>
+	(Assistant Professor of CMVS, Oulu)</span></p></li>
 	<li>
 	<p class="title" style="line-height: 150%; "><span lang="en-us">Dr. Quang 
 	Nhat V</span>o (AI scientist in Silo.AI<span lang="en-us">, Helsinki</span>)</p></li>
@@ -180,14 +174,13 @@ p
 	Innovation Institute, Fudan University)</p></li>
 	<li>
 	<p class="title" style="line-height: 150%; ">Dr. Jingang Shi (<span lang="en-us">Associate 
-	Professor of </span>Xi'an Jiaotong 
-	University, China)</p></li>
+	Professor of </span>Xi'an Jiaotong University, China)</p></li>
 	<li>
-	<p class="title" style="line-height: 150%">Adj. 
-			Prof. Xiaopeng Hong (<span lang="en-us">Professor of </span>Xi'an Jiaotong University, China)</p></li>
+	<p class="title" style="line-height: 150%">Adj. Prof. Xiaopeng Hong (<span lang="en-us">Professor 
+	of </span>Xi'an Jiaotong University, China)</p></li>
 	<li>
-	<p class="title" style="line-height: 150%">Dr. 
-			Xiaohua Huang (<span lang="en-us">Professor of </span>Nanjing Institute of Technology, China)</p></li>
+	<p class="title" style="line-height: 150%">Dr. Xiaohua Huang (<span lang="en-us">Professor 
+	of </span>Nanjing Institute of Technology, China)</p></li>
 	<li>
 	<p class="title" style="line-height: 150%"><span lang="en-us">Mr. Bofan Lin</span></p>
 	</li>
@@ -199,17 +192,18 @@ p
 	<p class="title" style="line-height: 150%"><span lang="en-us">Mr. Jiawei 
 	Zhang (F-Secure Corporation, Helsinki)</span></p></li>
 	<li>
-	<p class="title" style="line-height: 150%">Dr. Vili Kellokumpu (<span lang="en-us">VTT</span>, Finland)</p>
+	<p class="title" style="line-height: 150%">Dr. Vili Kellokumpu (<span lang="en-us">VTT</span>, 
+	Finland)</p>
 	</li>
 	<li>
 	<p class="title" style="line-height: 150%">Dr. Mohammad Ghahramani 
 	(Postdoctoral Research Fellow, Ryerson University, Canada)</p></li>
 	<li>
-	<p class="title" style="line-height: 150%">Dr. Yimo Guo (Siemens 
-	healthcare, USA)</p></li>
+	<p class="title" style="line-height: 150%">Dr. Yimo Guo (Siemens healthcare, 
+	USA)</p></li>
 	<li>
-	<p class="title" style="line-height: 150%">Mr. Jukka Holappa (Valossa 
-	Labs Oy, Finland)</p></li>
+	<p class="title" style="line-height: 150%">Mr. Jukka Holappa (Valossa Labs 
+	Oy, Finland)</p></li>
 	<li>
 	<p class="title" style="line-height: 150%">Ms. Iryna Anina (Bittium Oyj, 
 	Finland)</p></li>
@@ -240,107 +234,100 @@ p
 	<p class="title" style="line-height: 150%">Mr. Jinsheng WEI (Southeast 
 	University, Nanjing, China): Nov. 2020 - Nov. 2021</li>
 	<li>
-	<p class="title" style="line-height: 150%">Assoc. 
-			Prof. Bo 
-			LI (South China University of Technology, 
-			Guangzhou, China): Aug. 2019 - Aug. 2020</li>
+	<p class="title" style="line-height: 150%">Assoc. Prof. Bo LI (South China 
+	University of Technology, Guangzhou, China): Aug. 2019 - Aug. 2020</li>
 	<li>
 	<p class="title" style="line-height: 150%"><span lang="en-us">Assis</span>.<span lang="en-us"> 
 			Prof.</span> Xin
 			<span lang="en-us">Shu</span> (Nanjing Agricultural University, 
-			China): Aug. 2019 - Mar. 2020</li>
+	China): Aug. 2019 - Mar. 2020</li>
 	<li>
-	<p class="title" style="line-height: 150%"><span lang="en-us">Mr. 
-			Zhaofeng Li </span>(University of Chinese Academy of Sciences; 
-			Changchun Institute of Optics, Fine Mechanics and Physics,<span lang="en-us">
+	<p class="title" style="line-height: 150%"><span lang="en-us">Mr. Zhaofeng 
+	Li </span>(University of Chinese Academy of Sciences; Changchun Institute of 
+	Optics, Fine Mechanics and Physics,<span lang="en-us">
 	</span>Chinese Academy of Sciences): Oct. 2018 - Jun. 20<span lang="en-us">20</span></li>
 	<li>
-	<p class="title" style="line-height: 150%">Mr. Berkay Elag<span lang="fi">&ouml;z</span> (Izmir 
-			Katip Celebi University, Turkey): Jan. 2020 - Jun. 2020</li>
+	<p class="title" style="line-height: 150%">Mr. Berkay Elag<span lang="fi">鰖</span> 
+	(Izmir Katip Celebi University, Turkey): Jan. 2020 - Jun. 2020</li>
 	<li>
 	<p class="title" style="line-height: 150%">Mr. Yunrui Zhao (Beihang 
-			University): Jan. 2020 - Mar. 2020</li>
+	University): Jan. 2020 - Mar. 2020</li>
 	<li>
-	<p class="title" style="line-height: 150%">Mr. Gun Ahn (Seoul 
-			National university, Seoul): Sep. 2019 - Feb. 2020</li>
+	<p class="title" style="line-height: 150%">Mr. Gun Ahn (Seoul National 
+	university, Seoul): Sep. 2019 - Feb. 2020</li>
 	<li>
-	<p class="title" style="line-height: 150%"><span lang="en-us">Assoc. 
-			Prof. </span>Zhaoqiang Xia <span lang="en-us">(Northwestern 
-			Polytechnic University, Xi'an)</span>: Oct. 2019 - Jan. 2020</li>
+	<p class="title" style="line-height: 150%"><span lang="en-us">Assoc. Prof. </span>
+	Zhaoqiang Xia <span lang="en-us">(Northwestern Polytechnic University, 
+	Xi'an)</span>: Oct. 2019 - Jan. 2020</li>
 	<li>
-	<p class="title" style="line-height: 150%"><span lang="en-us">Mr. 
-			Xuesong Niu (Institute of Computing Technology, Chinese Academy of 
-			Sciences): Oct. 2019 - Jan. 2020</span></li>
+	<p class="title" style="line-height: 150%"><span lang="en-us">Mr. Xuesong 
+	Niu (Institute of Computing Technology, Chinese Academy of Sciences): Oct. 
+	2019 - Jan. 2020</span></li>
 	<li>
-	<p class="title" style="line-height: 150%"><span lang="en-us">Assoc. 
-			Prof. 
+	<p class="title" style="line-height: 150%"><span lang="en-us">Assoc. Prof. 
 			</span>Xu Cheng (Nanjing University of Information Science and 
-			Technology, China): July 2019 - Sep. 2019</li>
+	Technology, China): July 2019 - Sep. 2019</li>
 	<li>
-	<p class="title" style="line-height: 150%"><span lang="en-us">Assoc. 
-			Prof. 
-			Beiji</span>ng Chen (Nanjing University of Information Science and 
-			Technology, China): July 2019 - Aug. 2019</li>
+	<p class="title" style="line-height: 150%"><span lang="en-us">Assoc. Prof. 
+	Beiji</span>ng Chen (Nanjing University of Information Science and 
+	Technology, China): July 2019 - Aug. 2019</li>
 	<li>
-	<p class="title" style="line-height: 150%"><span lang="EN-US">Mr. 
-			Fan Dai (Northwestern Polytechnical University, China): Nov. 2018 - 
-			May 2019</span></li>
+	<p class="title" style="line-height: 150%"><span lang="EN-US">Mr. Fan Dai 
+	(Northwestern Polytechnical University, China): Nov. 2018 - May 2019</span></li>
 	<li>
-	<p class="title" style="line-height: 150%">Mr. Guifeng Li 
-			(Northwest University): Mar. - Nov. 2018</li>
+	<p class="title" style="line-height: 150%">Mr. Guifeng Li (Northwest 
+	University): Mar. - Nov. 2018</li>
 	<li>
 	<p class="title" style="line-height: 150%">Mr. Ngoc-Huynh Ho (Chonnam 
-			National University, South Korea; PhD candidate): Jan. 6 - Jan. 20, 
-			2019</li>
+	National University, South Korea; PhD candidate): Jan. 6 - Jan. 20, 2019</li>
 	<li>
-	<p class="title" style="line-height: 150%">Mr. Nhu-Tai Do (Chonnam 
-			National University, South Korea; PhD candidate): Jan. 6 - Jan. 20, 
-			2019</li>
+	<p class="title" style="line-height: 150%">Mr. Nhu-Tai Do (Chonnam National 
+	University, South Korea; PhD candidate): Jan. 6 - Jan. 20, 2019</li>
 	<li>
-	<p class="title" style="line-height: 150%">Mr. Yundi Guo (Central 
-			South University, Changsha, China): Jul. - Dec. 2018</li>
+	<p class="title" style="line-height: 150%">Mr. Yundi Guo (Central South 
+	University, Changsha, China): Jul. - Dec. 2018</li>
 	<li>
-	<p class="title" style="line-height: 150%">Ms. Yuxi Xia (Jiangxi 
-			University of Finance and Economics): Jan. 2018 - Jun. 2018</p></li>
+	<p class="title" style="line-height: 150%">Ms. Yuxi Xia (Jiangxi University 
+	of Finance and Economics): Jan. 2018 - Jun. 2018</p></li>
 	<li>
-	<p class="title" style="line-height: 150%">Ms. Na Liu (Tianjin 
-			University of Technology): Mar. 2017 - Feb. 2018</p></li>
+	<p class="title" style="line-height: 150%">Ms. Na Liu (Tianjin University of 
+	Technology): Mar. 2017 - Feb. 2018</p></li>
 	<li>
-	<p class="title" style="line-height: 150%">Ms. Wen Yang (Beijing 
-	University of Posts and Telecommunications): Sep. 2017 - Dec. 2017</p></li>
+	<p class="title" style="line-height: 150%">Ms. Wen Yang (Beijing University 
+	of Posts and Telecommunications): Sep. 2017 - Dec. 2017</p></li>
 	<li>
-	<p class="title" style="line-height: 150%"><span lang="en-us">Mr. Yuan 
-	Zong 
+	<p class="title" style="line-height: 150%"><span lang="en-us">Mr. Yuan Zong 
 	(Southeast University, Nanjing, China): Nov. 2016 - Nov. 2017</span></p>
 	</li>
 	<li>
-	<p class="title" style="line-height: 150%">Mr. Lei Tian (Beijing 
-	University of Posts and Telecommunications, China): <span lang="en-us">Nov. 2016 - Nov. 2017</span></p>
+	<p class="title" style="line-height: 150%">Mr. Lei Tian (Beijing University 
+	of Posts and Telecommunications, China): <span lang="en-us">Nov. 2016 - Nov. 
+	2017</span></p>
 	</li>
 	<li>
 	<p class="title" style="line-height: 150%">Mr. Jim Gribble (UC-Santa 
 	Barbara, USA): Aug. - Sep. 2017</p></li>
 	<li>
-	<p class="title" style="line-height: 150%"><span lang="en-us">Assoc. 
-	Prof. Yanliang Zhang (Henan Polytechnic University): Nov. 2016 - Nov. 2017</span></p>
+	<p class="title" style="line-height: 150%"><span lang="en-us">Assoc. Prof. 
+	Yanliang Zhang (Henan Polytechnic University): Nov. 2016 - Nov. 2017</span></p>
 	</li>
 	<li>
-	<p class="title" style="line-height: 150%">Assoc. Prof. Yongmao Wang 
-	(from Henan Polytechnic University): Oct. 2015 - Oct. 2016</p></li>
+	<p class="title" style="line-height: 150%">Assoc. Prof. Yongmao Wang (from 
+	Henan Polytechnic University): Oct. 2015 - Oct. 2016</p></li>
 	<li>
-	<p class="title" style="line-height: 150%">Mr. Wei Ke (University of 
-	Chinese Academy of Sciences, Beijing, China): Oct. 2015 to Sep. 2016</p>
+	<p class="title" style="line-height: 150%">Mr. Wei Ke (University of Chinese 
+	Academy of Sciences, Beijing, China): Oct. 2015 to Sep. 2016</p>
 	</li>
 	<li>
-	<p class="title" style="line-height: 150%">Ms. Qing 
-	Liu (Central South University, Changsha, China): Oct. 2015 - Apr. 2017</p>
+	<p class="title" style="line-height: 150%">Ms. Qing Liu (Central South 
+	University, Changsha, China): Oct. 2015 - Apr. 2017</p>
 	</li>
 	<li>
 	<p class="title" style="line-height: 150%">Mr. Athanasios Papaioannou 
 	(Imperial College London, UK): May - Jun. 2016</li>
 	<li>
-	<p class="title" style="line-height: 150%">Mr. Qiuhai He (Beijing 
-	Forestry University): Sep. 2013 - Sep. 2014</li>
+	<p class="title" style="line-height: 150%">Mr. Qiuhai He (Beijing Forestry 
+	University): Sep. 2013 - Sep. 2014</li>
 	<li>
 	<p class="title" style="line-height: 150%">Mr. Yan Zhai (Beijing Forestry 
 	University): Sep. 2012 - Aug. 2013</p></li>
