--- a/teammembers.htm
+++ b/teammembers.htm
@@ -32,11 +32,11 @@ p
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
 		<p align="left" style="text-align: center">
-		<img border="0" src="Kevin.jpg"></td>
+		<img border="0" src="Kevin.jpg" width="149" height="148"></td>
 		<td width="226" height="0" align="center" valign="top">
-		<img border="0" src="Mohammad.jpg" width="142" height="146"></td>
+		<img border="0" src="Mohammad.jpg" width="145" height="150"></td>
 		<td height="0" align="center" valign="top" width="209">
-		<img border="0" src="Hanlin.jpg"></td>
+		<img border="0" src="Hanlin.jpg" width="151" height="146"></td>
 		<td height="0" align="center" valign="top" width="223">
 		<img border="0" src="Qianru.jpg" width="153" height="150"></td>
 	</tr>
@@ -88,7 +88,7 @@ p
 		<td height="0" align="center" valign="top" width="209">
 		<img border="0" src="Atif.jpg"></td>
 		<td height="0" align="center" valign="top" width="223">
-		<img border="0" src="Henglin.jpg" width="134" height="145"></td>
+		<img border="0" src="Henglin.jpg" width="130" height="141"></td>
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
@@ -134,9 +134,9 @@ p
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
-		<img border="0" src="Yuhua.jpg"></td>
+		<img border="0" src="Yuhua.jpg" width="145" height="144"></td>
 		<td width="226" height="0" align="center" valign="top">
-		<img border="0" src="Xu.jpg" width="101" height="145"></td>
+		<img border="0" src="Xu.jpg" width="125" height="143"></td>
 		<td height="0" align="center" valign="top" width="209">
 		&#12288;</td>
 		<td height="0" align="center" valign="top" width="223">
