--- a/Pic.htm
+++ b/Pic.htm
@@ -19,7 +19,7 @@
     <td width="54%" height="169">
 	<p align="center">
 	<img border="0" src="Guoying1.jpg" width="274" height="285"></p>
-	<p align="center"><span lang="en-us"><b><font face="Times New Roman">Prof.</font></b></span><font face="Times New Roman"><b><span lang="EN-US"> Guoying Zhao</span></b></font></p>
+	<p align="center"><span lang="en-us"><b><font face="Times New Roman">Academy Prof.</font></b></span><font face="Times New Roman"><b><span lang="EN-US"> Guoying Zhao</span></b></font></p>
 	<p align="center"><font face="Times New Roman">&nbsp;&nbsp; 
     		Center for Machine 
     Vision <span lang="en-us">and Signal Analysis</span>, University of Oulu<span lang="en-us">, 
