--- a/personal.htm
+++ b/personal.htm
@@ -83,7 +83,7 @@ descriptors, gait analysis, dynamic-texture recognition, facial-expression
 recognition, human motion analysis, and person identification. Her research has 
 been reported by Finnish TV programs, newspapers and MIT Technology Review. </span></font></p>
 
-<table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" width="100%" id="AutoNumber1">
+<table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" width="179%" id="AutoNumber1">
   <tr>
     <td width="100%">
     <table border="0" width="100%" id="table1" height="325">
@@ -147,21 +147,23 @@ been reported by Finnish TV programs, newspapers and MIT Technology Review. </sp
 text-indent:-.38in;text-align:left;direction:ltr;unicode-bidi:embed;vertical-align:
 baseline;mso-line-break-override:restrictions;punctuation-wrap:simple">
 		<p style="margin-top: 24px; margin-bottom: 24px">
+		<img border="0" src="202109_Group.jpg" width="1128" height="754"></p>
+		<p style="margin-top: 24px; margin-bottom: 24px">
 		<font face="Times New Roman">
 		<u><b>Open positions</b></u>: Postdoctoral researchers, PhD students, Master thesis 
 		workers.</font></p>
 		<p><font face="Times New Roman">Call for Postdoctoral Researcher for 
 		Machine Vision and Signal Analysis: </font></p>
-		<p><font face="Times New Roman">
-		<a href="http://rekry.saima.fi/certiahome/open_job_view.html?did=5600&lang=en&id=000010760&jc=1">
-		http://rekry.saima.fi/certiahome/open_job_view.html?did=5600&amp;lang=en&amp;id=000010760&amp;jc=1</a>, 
-		Deadline: <b>Apr. 15, 2021</b>.</font></p>
+		<p><span lang="EN-US" style="font-family: Times New Roman">
+		<a style="color: #0563C1; text-decoration: underline; text-underline: single" href="https://rekry.saima.fi/certiahome/open_job_view.html?did=5600&lang=en&id=000012022&jc=1">
+		https://rekry.saima.fi/certiahome/open_job_view.html?did=5600&amp;lang=en&amp;id=000012022&amp;jc=1</a></span><font face="Times New Roman">, 
+		Deadline: <b>Nov. 30, 2021</b>.</font></p>
 		<p><font face="Times New Roman">Call for Doctoral Student for Machine 
 		Vision and Signal Analysis: </font></p>
-		<p><font face="Times New Roman">
-		<a href="http://rekry.saima.fi/certiahome/open_job_view.html?did=5600&lang=en&id=000010759&jc=1">
-		http://rekry.saima.fi/certiahome/open_job_view.html?did=5600&amp;lang=en&amp;id=000010759&amp;jc=1</a>, 
-		Deadline: <b>Apr. 15, 2021</b>.</font></p>
+		<p><span lang="EN-US" style="font-family: Times New Roman">
+		<a style="color: #0563C1; text-decoration: underline; text-underline: single" href="https://rekry.saima.fi/certiahome/open_job_view.html?did=5600&lang=en&id=000012022&jc=1">
+		https://rekry.saima.fi/certiahome/open_job_view.html?did=5600&amp;lang=en&amp;id=000012022&amp;jc=1</a></span><font face="Times New Roman">, 
+		Deadline: <b>Nov. 30, 2021</b>.</font></p>
 		<p style="margin-top: 24px; margin-bottom: 24px"><u><b>
 		<font face="Times New Roman">NEWS:</font></b></u></p>
 		<p style="margin-top: 24px; margin-bottom: 24px">
