--- a/main_experience.htm
+++ b/main_experience.htm
@@ -96,7 +96,7 @@ Projects as PI or Co-PI (Raised in total ~10.3 million EUR for my team):</span><
 	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; line-height: 150%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; margin-bottom: 0cm">
 	<font size="4"><span style="color: black">2021.09.01-2026.08.31: <b>Academy 
 	Professor</b> Grant (highest academic position of Academy of Finland): <b>
-	Towards vision-based emotion AI (EmotionAI)</b>.&nbsp; 798 750 &#8364;. </span></font><span lang="EN-US"><font size="4">Overall success rate: 
+	Towards vision-based emotion AI (EmotionAI)</b>.&nbsp; 2 370 539 &#8364;. </span></font><span lang="EN-US"><font size="4">Overall success rate: 
 	4%.</font></span></li>
 	<li>
 	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; line-height: 150%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; margin-bottom: 0cm">
