--- a/publications.htm
+++ b/publications.htm
@@ -149,29 +149,40 @@ Jan. 2018.</font></p>
 <font size="4">Nov. 2020.</font></span></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
 <font size="5"><b>2022</b></font></p>
-<p style="text-indent: 6px; margin: 6.0pt 0in" class="MsoNormal">
-<font size="4"><span lang="en-us">272. Zitong Yu, Xiaobai Li, and <b>Guoying 
+<p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
+<font size="4" face="Times New Roman">&nbsp;273. Zitong Yu, Xiaobai Li, and <b>Guoying 
 Zhao</b>. <u>Facial Video-based Physiological Signal Measurement: Recent 
-Advances and Affective</u></span><u> Applications</u>. IEEE Signal Processing 
+Advances and Affective Applications</u>. IEEE Signal Processing 
 Magazine.</font></p>
-<p style="text-indent: 6px; margin: 6.0pt 0in" class="MsoNormal">
-<font face="Times New Roman" size="4"><span lang="en-us">271. Henglin Shi, Wei 
-Peng, Haoyu Chen, Xin Liu, <b>Guoying Zhao</b>. </span><u>Multi-scale 3D Shift 
-Graph Convolution Network for Emotion<span lang="en-us"> </span>Recognition from 
-Human Actions</u><span lang="en-us"><u>.</u> </span>IEEE Intelligent Systems. 
-202<span lang="en-us">2</span>.</font></p>
-<p class="MsoNormal" style="text-indent: 6px; margin: 6.0pt 0in">
-<font face="Times New Roman" size="4">2<span lang="en-us">70</span>. Muzammil Behzad, Xiaobai Li, <b>
-Guoying Zhao</b>. <u>Disentangling 3D/4D Facial Affect Recognition with Faster 
+<p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
+<font face="Times New Roman" size="4">&nbsp;272. Henglin Shi, Wei 
+Peng, Haoyu Chen, Xin Liu, <b>Guoying Zhao</b>. <u>Multi-scale 3D Shift 
+Graph Convolution Network for Emotion Recognition from 
+Human Actions</u>. IEEE Intelligent Systems. 
+2022.</font></p>
+<p class="MsoPlainText" style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt">
+<font face="Times New Roman" size="4">&nbsp;271. Muzammil Behzad, Xiaobai Li, <b>Guoying Zhao</b>. 
+<u>Disentangling 3D/4D Facial Affect Recognition with Faster 
 Multi-view Transformer</u>. IEEE Signal Processing Letters. 2022.</font></p>
-<p class="MsoPlainText" style="text-align: justify; text-justify: inter-ideograph; text-indent: -.25in; line-height: 115%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<span lang="en-us"><font face="Times New Roman" size="4">&nbsp;269. </font>
+<p class="MsoPlainText" style="text-align: justify; text-justify: inter-ideograph; text-indent: -.25in; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
+<span lang="en-us"><font face="Times New Roman" size="4">&nbsp;270. </font>
 </span><font face="Times New Roman" size="4">Beijing Chen, Xin Liu, Yuhui Zheng,
 <b>Guoying Zhao</b>, and Yun-Qing Shi. <u>A robust GAN-generated face detection 
 method based on dual-color spaces and an improved Xception</u>. IEEE 
 Transactions on Circuits and Systems for Video Technology (TCSVT), 2022. </font>
 </p>
-<p class="MsoPlainText" style="text-indent: -.25in; line-height: 115%; layout-grid-mode: char; text-autospace: none; text-align: justify; text-justify: inter-ideograph; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">&nbsp;2<font face="Times New Roman" size="4">6<span lang="en-us">8</span>. 
+<p class="MsoPlainText" style="text-align: justify; text-justify: inter-ideograph; text-indent: -.25in; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
+<font face="Times New Roman" size="4">&nbsp;270. Haoyu Chen, Hao Tang, Zitong 
+Yu, Nicu Sebe, <b>Guoying Zhao</b>. <u>Geometry-Contrastive Transformer for 
+Generalized 3D Pose Transfer</u>. AAAI Conference on Artificial Intelligence (AAAI 
+2022). (Acceptance rate: 15%) </font>
+</p>
+<p class="MsoPlainText" style="text-align: justify; text-justify: inter-ideograph; text-indent: -.25in; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
+<font face="Times New Roman" size="4">&nbsp;269. Anja Keskinarkaus, Ruijing 
+Yang, Angelos Fylakis, Md. Surat-E-Mostafa, Arto Hautala, Yong Hu, Jinye Peng,
+<b>Guoying Zhao</b>, Tapio Sepp&auml;nen, Jaro Karppinen. <u>Multimedia Tools and 
+Applications</u>. 2022.</font></p>
+<p class="MsoPlainText" style="text-indent: -.25in; layout-grid-mode: char; text-autospace: none; text-align: justify; text-justify: inter-ideograph; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">&nbsp;2<font face="Times New Roman" size="4">6<span lang="en-us">8</span>. 
 Beijing Chen, Wenjin Tan, Yiting Wang, <b>Guoying Zhao</b>.
 <a href="https://scholar.google.com/scholar?oi=bibs&hl=en&cluster=7950198336869993283">
 Distinguishing Between Natural and GAN-Generated Face Images by Combining Global 
@@ -218,37 +229,37 @@ Networks and Learning Systems. 2021. </font></p>
 Skeletal Gesture Recognition via Discriminative Coding on Time-Warping Invariant 
 Riemannian Trajectories</u>. IEEE Trans. on Multimedia.<span lang="en-us"> 2021.</span>
 </font></p>
-<p class="MsoListParagraph" style="text-indent: -.25in; line-height: 115%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 0in; margin-bottom: 6.0pt">
+<p class="MsoListParagraph" style="text-indent: -.25in; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 0in; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">59</span>. Wei Peng, Xiaopeng Hong, <b>
 Guoying Zhao</b>. <u>Adaptive Modality Distillation for Separable Multimodal 
 Sentiment Analysis</u>. IEEE Intelligent Systems. 2021.</font></p>
-<p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
+<p class="MsoListParagraph" style="text-indent: -.25in; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4"><span lang="en-us">&nbsp;258. </span>Yante 
 Li, Xiaohua Huang, <b>Guoying Zhao</b>. <u>Micro-expression Action Unit 
 Detection with Spatial and Channel Attention</u>. Neurocomputing. 2021.</font></p>
-<p class="MsoListParagraph" style="text-indent: -.25in; line-height: 115%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 0in; margin-bottom: 6.0pt">
+<p class="MsoListParagraph" style="text-indent: -.25in; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 0in; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4"><span lang="en-us">&nbsp;257.</span> 
 Muzammil Behzad, Nhat Vo, Xiaobai Li, and <b>Guoying Zhao</b>. <u>Towards 
 Reading Beyond Faces for Sparsity-Aware 3D/4D Affect Recognition</u>. 
 Neurocomputing. 2021<span lang="en-us">.</span></font></p>
-<p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
+<p class="MsoListParagraph" style="text-indent: -.25in; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">56</span>. Khanh Tran, Quang-Nhat Vo, Xia<span lang="EN-US" style="line-height: 115%">openg Hong, Xiaobai Li, <b>Guoying Zhao</b>. <u>
 Micro-expression spotting: A new benchmark</u>. Neurocomputing, 2021.</span></font></p>
-<p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
+<p class="MsoListParagraph" style="text-indent: -.25in; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">55</span>. Wei Peng, Jingang Shi, Tuomas 
 Varanka, <b>Guoying Zhao</b>. <u>Rethinking the ST-GCNs for 3D Skeleton-based 
 Human Action Recognition</u>. Neurocomputing. 2021</font></p>
-<p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
+<p class="MsoListParagraph" style="text-indent: -.25in; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4">&nbsp;25<span lang="en-us">4</span>. Wei Peng, Jingang Shi, <b>Guoying Zhao</b>. 
 <u>Spatial Temporal Graph Deconvolutional Network for 
 Skeleton-based Human Action Recognition</u>. IEEE Signal Processing Letters. 
 2021.</font></p>
-<p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
+<p class="MsoListParagraph" style="text-indent: -.25in; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4">&nbsp;25<span lang="en-us">3</span>. Zitong Yu, Xiaobai Li, Pichao 
 Wang, <b>Guoying Zhao</b>. <u>TransRPPG: Remote Photoplethysmography Transformer 
 for 3D Mask Face Presentation Attack Detection</u>. IEEE Signal Processing 
 Letters. 2021<span lang="en-us">.</span></font></p>
-<p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
+<p class="MsoListParagraph" style="text-indent: -.25in; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4"><span lang="en-us">&nbsp;252.</span> 
 Yanying Liang, Wei Peng, Zhu-Jun Zheng, Olli Silven, <b>Guoying Zhao</b>. <u>A 
 hybrid quantum-classical neural network with deep residual learning</u>. Neural 
