--- a/publications.htm
+++ b/publications.htm
@@ -264,11 +264,9 @@ Letters. 2021<span lang="en-us">.</span></font></p>
 Yanying Liang, Wei Peng, Zhu-Jun Zheng, Olli Silven, <b>Guoying Zhao</b>. <u>A 
 hybrid quantum-classical neural network with deep residual learning</u>. Neural 
 Networks. 2021.</font></p>
-<p class="MsoPlainText" style="text-align: justify; text-justify: inter-ideograph; text-indent: -.25in; line-height: 115%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<span lang="en-us"><font face="Times New Roman" size="4">&nbsp;251.</font></span><font face="Times New Roman" size="4">
-</font><font face="Times New Roman" size="4">Dong Huang, Xiaoyi Feng, Haixi 
-Zhang, Zitong Yu, Jinye Peng, <b>Guoying Zhao</b>, Zhaoqiang Xia.&nbsp; <u>
-Spatio-Temporal Pain Estimation Network with Measuring Pseudo Heart Rate Gain</u>. 
+<p class="MsoListParagraph" style="text-indent: -.25in; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
+<font face="Times New Roman" size="4">&nbsp;251. Dong Huang, Xiaoyi Feng, Haixi 
+Zhang, Zitong Yu, Jinye Peng, <b>Guoying Zhao</b>, Zhaoqiang Xia.&nbsp; <u>Spatio-Temporal Pain Estimation Network with Measuring Pseudo Heart Rate Gain</u>. 
 IEEE Trans. on Multimedia, 2021.</font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">50</span>. Tong Zhang, Yuan Zong, Wenming Zheng, 
