--- a/publications.htm
+++ b/publications.htm
@@ -150,6 +150,11 @@ Jan. 2018.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
 <font size="5"><b>2022</b></font></p>
 <p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
+<font face="Times New Roman" size="4">&nbsp;</font><font size="4" face="Times New Roman">274. 
+Wei Peng, Tuomas Varanka, Abdelrahman Mostafa, Henglin Shi, <b>Guoying Zhao</b>.
+<u>Hyperbolic Deep Neural Networks: A Survey</u>. IEEE Transactions on Pattern 
+Analysis and Machine Intelligence journal (TPAMI). 2022.</font></p>
+<p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
 <font size="4" face="Times New Roman">&nbsp;273. Zitong Yu, Xiaobai Li, and <b>Guoying 
 Zhao</b>. <u>Facial Video-based Physiological Signal Measurement: Recent 
 Advances and Affective Applications</u>. IEEE Signal Processing 
